syntax = "proto3";
package alfred.vcs_connection.internal.v1;

option go_package = "/pb";

import "google/protobuf/empty.proto";
import "google/api/annotation.proto";
import "include/graphql.proto";
import "types/enums.proto";
import "validate/validate.proto";
import "google/protobuf/timestamp.proto";

service VCSConnectionInternal {
    // GetVCSConnection returns information of vcs stored in DB (internal)
    rpc GetVCSConnection(GetVCSConnectionRequest) returns (VCSConnection);

    //CreateVCSConnection creates vcs entry in DB (internal)
    rpc CreateVCSConnection(CreateVCSConnectionRequest) returns (VCSConnection);
}

message GetVCSConnectionRequest{
    string id = 1;
    string account_id = 2;
    types.VCSProviders provider = 3;
}

message VCSConnection {
    //id generated by uuid
    string id = 1;
    // label of vcs connection
    string label = 2;
    // Git Providers
    types.VCSProviders provider = 3;
    // unique connection_id
    string connection_id = 4;
    // access token
    string access_token = 5;
    // refresh token
    string refresh_token = 6 ;
    google.protobuf.Timestamp access_token_expiry = 7;
    google.protobuf.Timestamp refresh_token_expiry = 8;
    // user can revoke the vcs access
    bool revoked = 9;
    // vcs connection must belong to a account_id
    string account_id = 10;
    //specific user-name required while fetching the repo
    string user_name = 11;
}



message CreateVCSConnectionRequest{
    VCSConnection vcs_connection = 1;
}
